# cpsq

./: CMakeLists.txt  README.md  main.cpp
GameEngine/: CMakeLists.txt
GameEngine/assets/: map.txt  shaders.cpdf  test.cpdf
GameEngine/assets/shaders/: v_debugshape.glsl
GameEngine/assets/textures/: textureless.xcf
GameEngine/include/: cpsq.h
GameEngine/lib/: cpdl.lib
GameEngine/lib/include/: cpdl.h  glad.h
GameEngine/src/: main.cpp
GameEngine/src/render/: OpenGLRenderer.cpp  cpsq.render.h  opengl.h  opengl.renderer.cpp
GameEngine/tools/cpdf/: CMakeLists.txt
GameEngine/tools/cpdf/cli/: CMakeLists.txt  cli.cpp
GameEngine/tools/cpdf/lib/: library.cpp  library.h
Utilities/cpdt/: CMakeLists.txt  README.md
Utilities/cpdt/cli/: CMakeLists.txt  cli.cpp  cli.h
Utilities/cpdt/lib/: CMakeLists.txt  library.cpp  library.h
Utilities/cpdt/tests/sampledir/: map.txt  output.cpdf  output.cpdt
lib/: glad.lib
